# discord_notification_bot

./: main.py  pyproject.toml  readme.md
